# Apex-Memory-System-Development

./: .gitignore  .gitmodules  CLAUDE.md  DATA-QUALITY-VALIDATION-GUIDE.md  DAY-2-FRONTEND-TESTING-SESSION.md  DAY-2-PHASE-2-PROGRESS.md  DAY-2-PROGRESS-SUMMARY.md  DAY-2-WORKER-FIXES-COMPLETE.md  DAY-2-WORKER-FIXES-SESSION-2-COMPLETE.md  DEPENDENCY-FIX-SUMMARY.md  DEPLOYMENT-REALITY-CHECK.md  DIRECTORY-CLEANUP-2025-11-06.md  G_Tech_Stack_AI_Workforce.md  IMPLEMENTATION-STATUS-REPORT.md  PHASE-2-SCHEMA-OVERHAUL-COMPLETE.md  PRE-DEPLOYMENT-CLEANUP.md  README.md  REMAINING-WORK-INVENTORY.md  RESEARCH-CORRECTIONS-2025-10-06.md  RESEARCH-SESSION-STATUS.md  SYSTEM-MANUAL.html  TECHNOLOGY-STACK.md  VERIFICATION-REPORT-2025-11-06.md  apex-brain-network-visualization.html  apex-brain-visual-aid.html  apex-memory-diagrams.html  apex-memory-system  apex_memory_system_improvements.md  apex_optimized_architecture.html  validation-results-hybrid-v1.txt  validation-results-hybrid-v6.1.0-expanded.txt
.claude/: .mcp.json  README.md  (+1 more)
apex-mcp-server/: .env.example  DEPLOYMENT-CHECKLIST.md  EXAMPLES.md  HANDOFF-2025-10-23.md  INSTALLATION.md  PHASE-2-FIX-SUMMARY.md  PHASE-2-TESTING-GUIDE.md  PHASE-2-TESTING-RESULTS.md  README.md  RESUME-HERE.md  TROUBLESHOOTING.md  claude_desktop_config.json  claude_desktop_config.local.json  claude_desktop_config.pipx.json  install-apex-mcp.sh  pyproject.toml
apex-mcp-server/src/apex_mcp_server/: __init__.py  config.py  mcp_instance.py  server.py
apex-mcp-server/tests/: __init__.py  test_advanced_tools.py  test_ask_apex.py  test_basic_tools.py
(+671 files in other folders)
